# ProjetoSistemasOperativos

./: CMakeLists.txt  README.md  main.c  main_prodcons.c  main_sockets.c  main_threads.c  process_sensor.c  process_sensor.h  process_sensor_prodcons.c  process_sensor_prodcons.h  process_sensor_sockets.c  process_sensor_sockets.h  process_sensor_threads.c  process_sensor_threads.h  utils.c  utils.h
Exemplos/: co2high.c  co2high2.c
data/: CO2.csv  Humidade.csv  PM10.csv  PM2.5.csv  Temperatura.csv
